force-app/main/default/objects/Account/fields/azuredemo__c.field-meta.xml
<CustomField>
    <fullName>azuredemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>azuredemo</label>
    <type>Checkbox</type>
</CustomField>