force-app/main/default/objects/Account/fields/Bright_MLS__c.field-meta.xml
<CustomField>
    <fullName>Bright_MLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bright_MLS</label>
    <type>Checkbox</type>
</CustomField>