force-app/main/default/objects/Account/fields/Copado_Error__c.field-meta.xml
<CustomField>
    <fullName>Copado_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copado_Error</label>
    <type>Checkbox</type>
</CustomField>