force-app/main/default/objects/Account/fields/Copado_Test1__c.field-meta.xml
<CustomField>
    <fullName>Copado_Test1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>change in production directly.</description>
    <label>Copado_Test1</label>
    <type>Checkbox</type>
</CustomField>