force-app/main/default/objects/Account/fields/Demo_SC__c.field-meta.xml
<CustomField>
    <fullName>Demo_SC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo_SC</label>
    <type>Checkbox</type>
</CustomField>