force-app/main/default/objects/Account/fields/Domino_traiing__c.field-meta.xml
<CustomField>
    <fullName>Domino_traiing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for Domino Training Session</description>
    <label>Domino_traiing</label>
    <type>Checkbox</type>
</CustomField>