force-app/main/default/objects/Account/fields/DX_test__c.field-meta.xml
<CustomField>
    <fullName>DX_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DX_test</label>
    <type>Checkbox</type>
</CustomField>