force-app/main/default/objects/Account/fields/Hotfix_trial__c.field-meta.xml
<CustomField>
    <fullName>Hotfix_trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>aaaa</description>
    <label>Hotfix_trial</label>
    <type>Checkbox</type>
</CustomField>