force-app/main/default/objects/Account/fields/New_Rubrik__c.field-meta.xml
<CustomField>
    <fullName>New_Rubrik__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New_Rubrik</label>
    <type>Checkbox</type>
</CustomField>