force-app/main/default/objects/Account/fields/Shweta_DX__c.field-meta.xml
<CustomField>
    <fullName>Shweta_DX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>aswswsw</description>
    <label>Shweta_DX</label>
    <type>Checkbox</type>
</CustomField>