force-app/main/default/objects/Account/fields/Total_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Number__c</fullName>
    <description>changed by shweta chadha</description>
    <label>Total_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>